fix overflow in firefox

--- a/app/assets/stylesheets/modules/home.css.scss
+++ b/app/assets/stylesheets/modules/home.css.scss
@@ -9,7 +9,7 @@
   #photo-gallery {
     background-color: #ebebeb;
     height: 1051px;
-    overflow: overlay;
+    overflow: auto;
 
     @include mq-mobile {
       display: none;
